--- a/style.css
+++ b/style.css
@@ -26,10 +26,8 @@ body
 div.contenu 
 {
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0 30px 30px 30px;
-    min-width: 350px;
-    max-width: 800px;
+    margin: 40px 8px 20px 8px;
+    padding: 0 8px 20px 8px;
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1);
     overflow: visible;
 }
@@ -91,18 +89,31 @@ table.info
     width: 100%;
     color: white;
     background-color: #6c829dc0;
-    height: 80px;
+    height: 50px;
+}
+
+table.info td 
+{
+    text-align: center;
+    font-size: 12px;
+    vertical-align: top;
+}
+
+table.info th 
+{
+    font-size: 14px;
+    vertical-align: bottom;
+    padding-bottom: 8px;
 }
 
 div.colonne1
 {
     display: inline-block;
-    margin-right: 10%;
 }
 
 div.colonne
 {
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -112,6 +123,7 @@ div.colonne h2
     text-transform: uppercase;
     font-size: 15px;
     border-bottom: 5px solid #6C829D;
+    padding-bottom: 5px;
 }
 
 div.ingredients p
@@ -153,4 +165,59 @@ table.preparation td.preparation_etape
 table.preparation td
 {
     vertical-align: top;
+}
+
+/* Style pour desktop */
+
+@media only screen and (min-width: 768px )
+{
+    div.contenu 
+    {
+        margin: 60px 10% 80px 10%;
+        padding: 0 30px 30px 30px;
+        min-width: 350px;
+    }
+
+    table.info
+    {
+        height: 80px;
+    }
+
+    table.info td
+    {
+        font-size: 14px;
+    }
+
+    table.info th 
+    {
+        font-size: 16px;
+    }
+
+    div.colonne1
+    {
+        margin-right: 10%;
+    }
+
+    div.colonne
+    {
+        width: 45%;
+    }
+
+
+    div.colonne2
+    {
+        float: right;
+    }
+
+    
+}
+
+@media only screen and (min-width: 900px )
+{
+   div.contenu
+   {
+       margin-left: auto;
+       margin-right: auto;
+       width: 645px;
+   } 
 }
